deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hoshi-ui
  namespace: hoshi-note
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - hoshi-note.ixk.me
      secretName: hoshi-note-tls
  rules:
    - host: hoshi-note.ixk.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hoshi-ui
                port:
                  number: 80
